@@ -9,6 +9,7 @@ my $css = CSS::Struct::Output::Raw->new(
         'output_handler' => \*STDOUT,
 );
 
+$css->put(['c', 'comment']);
 $css->put(['a', '@charset', 'utf-8']);
 $css->put(['s', 'selector#id']);
 $css->put(['s', 'div div']);
@@ -20,4 +21,4 @@ $css->put(['r', "\n"]);
 $css->flush;
 
 # Output:
-# @charset "utf-8";selector#id,div div,.class{weight:100px;font-size:10em;}
+# /*comment*/@charset "utf-8";selector#id,div div,.class{weight:100px;font-size:10em;}
